# langchain-ai-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  conversation_store.py  document_loader.py  embeddings.py  evaluation.py  llm.py  rag_chain.py  styles.py  text_splitter.py  vector_store.py
tests/: test_api.py  test_config.py  test_conversation_store.py  test_document_loader.py  test_embeddings.py  test_llm.py  test_rag_chain.py  test_text_splitter.py  test_vector_store.py
